Mon Mar 14 16:02:59 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (ruby_is_fd_loadable): now return -1 if loadable but
	  may block.

	* ruby.c (open_load_file): wait to read by the result of
	  ruby_is_fd_loadable, without fstat.

Mon Mar 14 13:38:38 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (fix2str): improve r54092 like rb_int2big().

Mon Mar 14 10:02:23 2016  Eric Wong  <e@80x24.org>

	* ext/openssl/ossl_ssl.c (ossl_sslctx_setup): document as MT-unsafe
	  [ruby-core:73803] [Bug #12069]

Sun Mar 13 09:43:23 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h (O_SHARE_DELETE): change to fit Fixnum
	  limit.  [ruby-core:74285] [Bug #12171]

Sun Mar 13 09:15:45 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (rb_fix2str): fix edge case, accidentally generated
	  wrong Fixnum from LONG_MIN.

Sat Mar 12 09:50:27 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_f_catch): [DOC] fix malformed RDoc syntax, "+...+"
	  cannot enclose non-identifier characters.
	  a patch by Sebastian S in [ruby-core:74278].  [Bug#12170]

Sat Mar 12 02:44:48 2016  Tanaka Akira  <akr@fsij.org>

	* test/lib/test/unit.rb: describe !/REGEXP/ in the help message.

Fri Mar 11 17:03:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/lib/test/unit.rb (Options#non_options): make regexp name
	  options prefixed with "!" negative filters.

	* common.mk (TEST_EXCLUDES): use negative filter to exclude memory
	  leak tests.  -x option excludes test files, not test methods.

Fri Mar 11 16:11:27 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, casefold.h: Streamlining approach to
	  case mapping data not available from case folding by unifying all
	  three cases (special title, special upper, special lower).
	* enc/unicode.c: Adjust macro names for above (macros are currently inactive).
	  (with Kimihito Matsui)

Thu Mar 10 17:34:16 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
